{
    "name": "GameControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "4913353d-1325-45dd-90c1-cb8a432a3bb9",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "26047bd5-e903-497e-b554-d95a8dd65ff3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "e2a1891a-dbd7-4cbf-82e0-16df0cfda95a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "caab4955-20a9-4377-9fad-b2912bf69de5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51b54c6b-f0ad-4549-8895-b0a04a8c25fc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}